--- a/Day_3_of_python_.ipynb
+++ b/Day_3_of_python_.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNqIIeC5X9GrE3ZDLzKZNk9",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nisth-2003/Day-3-of-python-code/blob/main/Day_3_of_python_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +74,7 @@
         "id": "Dw5lqO5dXdgx",
         "outputId": "fc8d6d20-32f3-4a3b-d999-a674c4ff0ba8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +103,7 @@
         "id": "G3hTPNdyX-_T",
         "outputId": "347d5a6d-54d0-458c-90fe-e02b7f3abe4f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +136,7 @@
         "id": "YIjjf90DYpuN",
         "outputId": "452dee4c-1d2e-4e3c-956d-0a43194ca8a3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +174,7 @@
         "id": "3o3AMbvZaN9C",
         "outputId": "cbe7dcd0-e00e-461d-b2d4-cb16ce457e12"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
